--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -10,8 +10,10 @@ h3 {
 }
 
 #dataset {
-  height: 50px;
-  background-color: rgb(198, 178, 212);
+  width: 15%;
+border-radius: 10px;
+padding: 35px 35px;
+background-color: rgb(198, 178, 212);
 }
 .featured-datasets {
   margin-top: 100px;
