--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -10,10 +10,13 @@ h3 {
 }
 
 #dataset {
-  width: 15%;
-border-radius: 10px;
-padding: 35px 35px;
-background-color: rgb(198, 178, 212);
+  width: 25%;
+  border-radius: 10px;
+  padding: 35px 35px;
+  background-color: rgb(198, 178, 212);
+  height: 90px;
+  justify-content: center;
+  align-content: center;
 }
 .featured-datasets {
   margin-top: 100px;
