--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -1,11 +1,54 @@
-
-.search-bar {
-  align-content: center;
+#search-bar1 {
+  position: absolute !important;
+  bottom: 200px !important;
+  background-color: transparent;
+  font-weight: bold !important;
+  border: 3px white solid;
+  width: 50% !important;
+  height: 50px !important;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: white;
+  margin-top: 100px;
+  border-radius: 0px !important;
+  margin-left: 25% !important;
+}
+#icon {
+  width: 5% !important;
+  height: 5% !important;
+  margin-left: 47% !important;
+}
+#search-bar2 {
+  position: absolute !important;
+  bottom: 220px !important;
+  font-weight: bold !important;
+  color: white !important;
+  width: 50% !important;
+  height: 50px !important;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  color: white;
+  margin-top: 100px;
+  border-radius: 0px !important;
+  margin-left: 25% !important;
+  text-align: center;
 }
 
-
+.Fullsearch {
+  position: relative;
+}
+#data {
+  text-align: center;
+  text-decoration: bold;
+  margin-top: 10px !important;
+}
 h3 {
   font-family: Lato !important;
+}
+#image {
+  width: 100% !important;
+  object-fit: fill !important;
+  min-width: 100vh;
 }
 
 #dataset {
@@ -21,10 +64,22 @@ h3 {
 .featured-datasets {
   margin-top: 25px;
 }
+.d_container {
+  align-content: center !important;
+}
 
-.Fullsearch{
-  background-color: rgb(198, 178, 212);
-  margin-top: 10px;
-  padding: 100px;
-  padding-bottom: 90px !important;
+#center {
+  display: grid;
+  height: 250px;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
+  margin-top: 20px;
+}
+.help {
+  height: 60%;
+  width: 300px;
+  border: 3px #4e2a84 solid !important;
+  background-color: white !important;
+  box-shadow: 10px 10px 8px #4e2a84 !important;
+  color: black !important;
 }
