added photos to about page

--- a/src/styles/Contribute.css
+++ b/src/styles/Contribute.css
@@ -40,6 +40,8 @@ h5 {
   padding-top: 10px !important;
   padding-left: 275px !important;
   padding-right: 275px !important;
+  font-family: OpenSans;
+  color: #4e4f52;
 }
 
 #purple {
