--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -5,36 +5,43 @@
   color: #4e2a84;
   justify-content: left !important;
   padding-top: 40px;
-  padding-left: 0 !important;
+  margin-right: 14px !important;
 }
 
 .ui.grid{
   padding: 0 9% 0 9%;
-  text-align: center;
   margin-top: 0;
+}
+
+#two{
+  padding: 3%;
 }
 
 .start{
   padding-bottom: 40px !important;
 }
 
-.eight{
-  text-align: left;
-}
-
-.ui.centered.four.column.grid#one {
+#one {
   background-color: #f2f2f2;
-  padding-bottom: 15px;
+  padding-bottom: 75px;
   font-family: OpenSans;
   color: #6d6f73;
-}
-
-.first {
-  padding-bottom: 60px !important;
 }
 
 .next{
   border-bottom: #4e2a84 solid 3px;
   line-height: 2px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+}
+
+#person{
+  height: 47.39% !important;
+  width:100% !important;
+  object-fit:cover;
+  justify-content: center !important;
+  padding: 10% 15% 10% 15%;
+}
+
+.four.wide.column{
+  padding: 0 !important;
 }
