--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -8,7 +8,7 @@
   font-family: OpenSans;
   font-size: 19px;
   color: #4e2a84;
-  padding-bottom: 10px;
+  padding-bottom: 5vi;
 }
 
 .banner {
@@ -23,7 +23,7 @@
   padding-bottom: 5px;
 }
 
-.icon {
+.ico {
   padding-left: 20px;
   padding-top: 22px;
   color: #690aa4;
@@ -36,7 +36,7 @@
 
 @media screen and (max-width: 815px) {
   #myTopnav {display: none;}
-  .banner .icon {
+  .banner .ico {
     display: block;
   }
   .topnav.responsive {
@@ -44,7 +44,6 @@
     margin: 67.42px 0 -135px -130px;
     padding-bottom: 130px;
     width: 100%;
-    border-top: 3px solid #4e2a84;
   }
   .logonav {
     width: 130px;
@@ -52,8 +51,12 @@
   #button.ui.button{
     margin: 0;
     width: 100%;
-    border-bottom: 1px solid #4e2a84;
+    border-top: 1px solid #4e2a84;
     border-radius: 0;
+  }
+
+  .banner{
+    border-bottom: 6px solid #4e2a84;
   }
 }
 
