--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -91,24 +91,39 @@
 }
 
 #grid-container {
-  display: grid;
-  grid-template-columns: 50% 50% 50%;
+  display: flex;
   align-items: center;
-  grid-row-gap: 1ch;
 }
 .small-grid {
-  display: grid;
-  grid-gap: 10px;
-  width: 250px;
-  height: 150px;
-  border: 3px #4e2a84 solid !important;
-  background-color: rgb(238, 237, 237) !important;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  margin-top: 5%;
+  justify-content: space-around;
+  width: 100%;
+}
+.pop-cat {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 25px;
+  align-items: center;
+  text-align: center;
+}
+.pop-title {
+  margin-top: 20px;
 }
 
 .cat-but {
-  color: black !important;
-  font-family: Helvetica, sans-serif !important;
-  font-size: 26px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #4e2a8f !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  font-weight: bold;
+  font-size: 22px;
+  border-style: none;
+  background-color: transparent;
 }
 
 #data {
