--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -25,10 +25,10 @@
 
 }
 #top {
-  bottom: 63% !important;
+  bottom: 55% !important;
 }
 #bottom {
-  bottom: 56% !important;
+  bottom: 48% !important;
   width: 100%;
 
   font-size: 24pt;
@@ -44,9 +44,10 @@
   border-radius: 0px !important;
   text-align: center;
 }
-.Fullsearch {
+.FullsearchMain {
   position: relative;
   width: 100%;
+  height: 350px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -99,14 +100,14 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-content: center;
-  margin-top: 5%;
-  justify-content: space-around;
+  margin-top: 10%;
+  justify-content: space-evenly;
   width: 100%;
 }
 .pop-cat {
   display: flex;
   flex-direction: column;
-  margin-bottom: 25px;
+  margin: 15px;
   align-items: center;
   text-align: center;
 }
@@ -121,7 +122,7 @@
   color: #4e2a8f !important;
   font-family: Arial, Helvetica, sans-serif !important;
   font-weight: bold;
-  font-size: 22px;
+  font-size: 20px;
   border-style: none;
   background-color: transparent;
 }
@@ -137,9 +138,15 @@ h3 {
 
 #image {
   width: 100% !important;
-  object-fit: fill !important;
-  min-width: 100vh;
+  background-size: cover !important;
+  background-position: center center;
+  background-attachment: fixed;
   filter: brightness(80%) !important;
+}
+@media only screen and (max-width: 767px) {
+  #image {
+    background-image: url(../nu_small.jpg);
+  }
 }
 
 #dataset {
@@ -153,8 +160,11 @@ h3 {
 }
 
 .featured-datasets {
-  margin-top: 25px;
-  width: 100px;
+  display: flex;
+  justify-content: center;
+  height: 250px;
+  padding: 10% 0 10% !important;
+  width: 100%;
 }
 .d_container {
   align-content: center !important;
@@ -170,6 +180,6 @@ h3 {
 
 .featured{
   height: 250px;
-  padding: 100px 0 0 !important;
+  padding: 10% 0 0 !important;
   width: 100%;
 }
