--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,5 +1,5 @@
 
-#header{
+#hdr{
   font-family: OpenSans;
   font-size: 25px;
   color: #4e2a84;
@@ -87,7 +87,7 @@
     width: 900px !important;
   }
 
-  #header{
+  #hdr{
     width: 1000px !important;
   }
 }
