--- a/src/styles/Dataset.css
+++ b/src/styles/Dataset.css
@@ -1,6 +1,6 @@
 .m-but {
   background-color: white !important;
-  border: 2px solid purple !important;
+  color: black !important;
 }
 .def {
   background-color: rgb(235, 235, 235);
