--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -23,7 +23,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   display: grid;
-
+  max-width: 980px;
 }
 #top {
   bottom: 55% !important;
@@ -101,9 +101,10 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-content: center;
-  margin-top: 10%;
+  margin-top: 5%;
   justify-content: space-evenly;
   width: 100%;
+  max-width: 1400px;
 }
 .pop-cat {
   display: flex;
@@ -142,12 +143,8 @@ h3 {
   background-size: cover !important;
   background-position: center center;
   background-attachment: fixed;
+  max-width: 1400px;
   filter: brightness(80%) !important;
-}
-@media only screen and (max-width: 767px) {
-  #image {
-    background-image: url(../nu_small.jpg);
-  }
 }
 
 #dataset {
@@ -166,6 +163,7 @@ h3 {
   height: 250px;
   padding: 10% 0 10% !important;
   width: 100%;
+  max-width: 1400px;
 }
 .d_container {
   align-content: center !important;
