--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -96,6 +96,13 @@
   display: flex;
   align-items: center;
 }
+#oneMain {
+  background-color: #f2f2f2;
+  font-family: OpenSans;
+  color: #6d6f73;
+  padding-bottom: 100px;
+  padding-top: 38px;
+}
 .small-grid {
   display: flex;
   flex-direction: row;
@@ -116,7 +123,15 @@
 .pop-title {
   margin-top: 20px;
 }
-
+#pop-header{
+  font-family: OpenSans;
+  font-size: 25px;
+  color: #4e2a84;
+  justify-content: center;
+  padding-top: 12px;
+  max-width: 1400px;
+  /* margin-right: 14px !important; */
+}
 .cat-but {
   display: flex;
   flex-direction: column;
@@ -138,7 +153,7 @@ h3 {
   font-family: Lato !important;
 }
 
-#image {
+#imageMain {
   width: 100% !important;
   background-size: cover !important;
   background-position: center center;
@@ -161,7 +176,7 @@ h3 {
   display: flex;
   justify-content: center;
   height: 250px;
-  padding: 10% 0 10% !important;
+  padding: 8% 0 10% !important;
   width: 100%;
   max-width: 1400px;
 }
