popular categories header space

--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -108,7 +108,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-content: center;
-  margin-top: 5%;
+  margin-top: 5% !important;
   justify-content: space-evenly;
   width: 100%;
   max-width: 1400px;
