removed featured ds

--- a/src/styles/MainPage.css
+++ b/src/styles/MainPage.css
@@ -23,7 +23,7 @@
 }
 
 #oneMain {
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   font-family: OpenSans;
   color: #6d6f73;
   padding-bottom: 100px;
