--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -11,6 +11,15 @@
   padding-bottom: 5vi;
 }
 
+#dropdown_item {
+  margin-left: 20px;
+  background-color: white;
+  font-family: OpenSans;
+  font-size: 13px;
+  color: #4e2a84;
+  padding-bottom: 5vi;
+}
+
 .banner {
   display: flex;
   justify-content: space-between;
