--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -17,7 +17,7 @@
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
-  font-weight: medium;
+  font-weight: bold;
   color: black;
   padding-bottom: 5vi;
 }
