--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -22,6 +22,15 @@
   padding-bottom: 5vi;
 }
 
+#menu {
+  margin-left: 10px;
+  background-color: white;
+  font-family: OpenSans;
+  font-size: 19px;
+  color: #4e2a84;
+  padding-bottom: 5vi;
+}
+
 .banner {
   display: flex;
   justify-content: space-between;
@@ -64,7 +73,14 @@
     border-top: 1px solid #4e2a84;
     border-radius: 0;
   }
-
+  #menu.ui.dropdown{
+    margin: 0;
+    width: 100%;
+    border-radius: 0;
+  }
+  #menu {
+    margin-left: 100px;
+  }
   .banner{
     border-bottom: 6px solid #4e2a84;
   }
